--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     "organization": true
   },
   "license": "MIT",
-  "packageManager": "pnpm@10.8.0",
+  "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
+    "@eslint/js": "^9.38.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.17.0",
-    "aws-cdk": "^2.1024.0",
-    "cdk-nag": "^2.36.56",
-    "eslint": "^9.32.0",
-    "globals": "^16.3.0",
+    "@types/node": "^22.18.13",
+    "aws-cdk": "^2.1031.0",
+    "cdk-nag": "^2.37.55",
+    "eslint": "^9.38.0",
+    "globals": "^16.4.0",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
     "test-js": "^0.0.4",
-    "ts-jest": "^29.4.1",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
   },
   "dependencies": {
     "@orcabus/platform-cdk-constructs": "0.0.68",
-    "aws-cdk-lib": "^2.210.0",
+    "aws-cdk-lib": "^2.221.1",
     "constructs": "^10.4.2"
   }
 }
